--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^15.1.1
-  intl: ^0.20.2
+  # intl: ^0.20.2
   dotted_border: ^3.1.0
   super_drag_and_drop: ^0.9.1
 
